--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.13.4",
     "js-cookie": "^2.1.1",
     "lodash": "^4.6.1",
+    "mocha": "^3.2.0",
     "moment": "^2.15.2",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.14",
@@ -31,11 +32,7 @@
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
     "css-loader": "^0.23.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.9.0",
+    "eslint-config-rallycoding": "^3.2.0",
     "json-loader": "^0.5.4",
     "node-sass": "^3.4.2",
     "nodemon": "^1.9.1",
