--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "moment": "^2.15.2",
     "mongodb": "^2.1.18",
     "mongoose": "^4.4.14",
+    "morgan": "^1.7.0",
     "react": "^0.14.7",
     "react-countdown-timer": "^1.0.3",
     "react-dom": "^0.14.7",
