--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "axios": "^0.15.2",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "js-cookie": "^2.1.1",
