--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
     "js-cookie": "^2.1.1",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.6.1",
     "mocha": "^3.2.0",
     "moment": "^2.15.2",
