--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
     "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "react": "^0.14.7",
     "react-countdown-timer": "^1.0.3",
     "react-dom": "^0.14.7",
