changed indent from 4 to 2

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,12 @@
-{
-  "env": {
-    "browser": true
-  },
-  "extends": "rallycoding",
-  "rules": {
-    "global-require": 0,
-    "import/no-extraneous-dependencies": 0,
-    "no-underscore-dangle": 0,
-    "no-shadow": 0
-  }
-}
+// {
+//   "env": {
+//     "browser": true
+//   },
+//   "extends": "rallycoding",
+//   "rules": {
+//     "global-require": 0,
+//     "import/no-extraneous-dependencies": 0,
+//     "no-underscore-dangle": 0,
+//     "no-shadow": 0
+//   }
+// }
