--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react": "^0.14.7",
     "react-countdown-timer": "^1.0.3",
     "react-dom": "^0.14.7",
+    "react-launch-darkly": "^0.0.8",
     "react-number-count-down": "^1.0.5",
     "react-redux": "^5.0.2",
     "react-router": "^2.0.1",
